# workflow-orchestration-queue-zulu48

./: .ai-repository-summary.md  .assembled-orchestrator-prompt.md  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  workflow-orchestration-queue-zulu48.code-workspace
.agents/skills/forensic-analysis-report/: SKILL.md
.agents/skills/orchestration-run-analysis/: SKILL.md
.devcontainer/: devcontainer.json
.github/workflows/: python-ci.yml
.opencode/agents/: cloud-infra-expert.md  code-reviewer.md  database-admin.md
debrief-and-document/: debrief-report.md
docs/: implementation-plan.md  local-orchestration-quickstart.md  new_features.md
docs/.archived/: non-idle-failure-forensics.md  pr-approval-merge-plan.md  prompt-refactor-analysis.md
plan_docs/: OS-APOW Architecture Guide v3.2.md  OS-APOW Development Plan v4.2.md  OS-APOW Implementation Specification v1.2.md  architecture.md  interactive-report.html  tech-stack.md  workflow-plan.md
src/: __init__.py  notifier_service.py  orchestrator_sentinel.py
src/models/: __init__.py  github_events.py  work_item.py
src/queue/: __init__.py  github_queue.py
src/sentinel/: __init__.py
src/sentinel/interfaces/: __init__.py  work_queue.py
src/sentinel/models/: __init__.py  work_item.py
src/sentinel/providers/: __init__.py
src/sentinel/providers/github/: __init__.py  issue_queue.py
test/: test-opencode-run.sh
tests/: conftest.py  test_models.py  test_notifier.py  test_sentinel.py
tests/unit/: test_github_issue_queue.py  test_work_item.py
